kustomizations/data/polynote/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polynote
  labels:
    component: polynote-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      component: polynote-engine
  template:
    metadata:
      labels:
        component: polynote-engine
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: polynote
        image: polynote/polynote:0.3.12-2.12
        ports:
        - containerPort: 8192
          name: http-web
        volumeMounts:
        - mountPath: /opt/config/config.yaml
          name: polynote-config-volume
          subPath: config.yaml
        - mountPath: /opt/notebooks/
          name: polynote-data-volume
        args: [
          --config, /opt/config/config.yaml,
        ]
        readinessProbe:
          tcpSocket:
            port: 8192
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          initialDelaySeconds: 15
          tcpSocket:
            port: 8192
        resources:
          requests:
            cpu: "250m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        securityContext:
          # capabilities:
          #   drop:
          #   - ALL
          # readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
      volumes:
      - name: polynote-data-volume
        emptyDir: {}
      - name: polynote-config-volume
        configMap:
          name: polynote-config-file
          defaultMode: 0440
